--- a/vercel.json
+++ b/vercel.json
@@ -4,7 +4,7 @@
         "use":"@vercel/python",
         "config": {"maxLamdaSize":"15mb","runtime":"python3.10"}
     }],
-    "routes0":[{
+    "routes":[{
         "src":"/(.*)",
         "dest":"PMS/wsgi.py"
     }]
